Clean achitecture added

--- a/Shop.api/appsettings.json
+++ b/Shop.api/appsettings.json
@@ -20,5 +20,8 @@
       }
     ],
     "Enrich": [ "FromLogContext" ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=phoneshop;Username=shopuser;Password=shopPass123"
   }
 }
