--- a/Shop.api/Shop.Api.csproj
+++ b/Shop.api/Shop.Api.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\PhoneShop.Application\PhoneShop.Application.csproj" />
+    <ProjectReference Include="..\src\PhoneShop.Infrastructure\PhoneShop.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
