--- a/Shop.api/Shop.Api.csproj
+++ b/Shop.api/Shop.Api.csproj
@@ -1,4 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+	
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -18,5 +19,6 @@
     <ProjectReference Include="..\src\PhoneShop.Application\PhoneShop.Application.csproj" />
     <ProjectReference Include="..\src\PhoneShop.Infrastructure\PhoneShop.Infrastructure.csproj" />
   </ItemGroup>
+
 
 </Project>
