--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=PhoneShopDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
   "AllowedHosts": "*"
 }
