--- a/Shop.api/Shop.Api.csproj
+++ b/Shop.api/Shop.Api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
@@ -18,6 +19,10 @@
   <ItemGroup>
     <ProjectReference Include="..\src\PhoneShop.Application\PhoneShop.Application.csproj" />
     <ProjectReference Include="..\src\PhoneShop.Infrastructure\PhoneShop.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Validators\" />
   </ItemGroup>
 
 
